--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lrows",
+  "name": "erensenell",
   "version": "4.0.0",
   "description": "Botclub sunucusu için yapılan gelişmiş özel oda sistemli bot altyapısı.",
   "main": "index.js",
