--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "erensenell",
   "version": "4.0.0",
-  "description": "Botclub sunucusu için yapılan gelişmiş özel oda sistemli bot altyapısı.",
+  "description": "erensenell",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
